--- a/index.html
+++ b/index.html
@@ -1,18 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Chicken Crossing Road</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;900&display=swap" rel="stylesheet" />
+    <style>
+        :root { --bg:#0f1226; --panel:#171a34; --accent:#ffd166; --accent2:#06d6a0; --text:#e9ecf1; --muted:#9aa3b2; }
+        * { box-sizing: border-box; }
+        body {
+            margin: 0;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            background: radial-gradient(1200px 800px at 50% -10%, #1c2250 0%, var(--bg) 60%);
+            color: var(--text);
+            font-family: 'Nunito', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+        }
+        .frame {
+            width: min(92vw, 980px);
+            padding: 18px;
+            background: linear-gradient(180deg, rgba(255, 255, 255, 0.06), rgba(255,255,255,0.02));
+            border: 1px solid rgba(255,255,255,0.08);
+            border-radius: 16px;
+            box-shadow: 0 20px 60px rgba(0,0,0,0.35), inset 0 1px 0 rgba(255,255,255,0.06);
+            backdrop-filter: blur(6px);
+            overflow: hidden;
+        }
+        header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 6px 8px 14px;
+            flex-wrap: wrap;
+            gap: 10px;
+        }
+        .brand { font-weight: 900; letter-spacing: .3px; font-size: 20px; }
+        .brand em { color: var(--accent); font-style: normal; }
+        .sub { color: var(--muted); font-size: 12px; }
+        .hud {
+            display: flex; gap: 12px; align-items: center; flex-wrap: wrap;
+            padding: 10px 12px; border-radius: 12px;
+            background: rgba(29, 52, 23, 0.7);
+            border: 1px solid rgba(255, 255, 255, 0.06);
+            max-width: 100%;
+        }
+        .pill { padding: 6px 10px; border-radius: 10px; background: rgba(255,255,255,0.06); font-weight: 700; }
+        .canvas-wrap { position: relative; display: grid; place-items: center; width: 100%; }
+        canvas {
+            width: 100%;
+            max-width: 100%;
+            height: auto;
+            aspect-ratio: 4 / 3; /* 800x600 */
+            border-radius: 14px;
+            border: 1px solid rgba(255,255,255,0.08);
+            box-shadow: 0 12px 40px rgba(0,0,0,0.4);
+            background: #7b8ba3;
+            image-rendering: pixelated;
+        }
+        .overlay { position: absolute; inset: 0; pointer-events: none; border-radius: 14px; box-shadow: inset 0 0 0 2px rgba(255,255,255,0.04); }
+        footer { display: flex; justify-content: space-between; align-items: center; padding: 12px 8px 4px; color: var(--muted); font-size: 12px; }
+        .kbd { font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace; background: rgba(255,255,255,0.06); padding: 2px 6px; border-radius: 6px; border: 1px solid rgba(255,255,255,0.12); color: var(--text); }
+        .btn {
+            appearance: none; border: none; cursor: pointer; pointer-events: auto;
+            padding: 10px 14px; border-radius: 10px; font-weight: 800; letter-spacing: .2px; color: #0b0e1e;
+            background: linear-gradient(180deg, var(--accent), #f8b934);
+            box-shadow: 0 6px 20px rgba(255,209,102,0.35);
+            transition: transform .06s ease, filter .2s ease;
+        }
+        .btn:hover { transform: translateY(-1px); filter: brightness(1.02); }
+        .btn:active { transform: translateY(0); filter: brightness(.98); }
+    </style>
+    
 </head>
 <body>
-<<<<<<< HEAD
-	<p>Versi: 1.0.0</p>
-=======
-	<footer>
-  <p>Versi: 1.1.0</p>
-</footer>
->>>>>>> release/1.1.0
-
+    <div class="frame">
+        <header>
+            <div>
+                <div class="brand">Chicken <em>Crossing</em></div>
+                <div class="sub">Arrow keys to move • Avoid cars • Reach the top</div>
+            </div>
+        </header>
+        <div class="canvas-wrap">
+            <div class="overlay"></div>
+        </div>
+        <footer>
+            <div>Tip: Use <span class="kbd">↑</span> <span class="kbd">↓</span> <span class="kbd">←</span> <span class="kbd">→</span></div>
+            <div>Made with Canvas & TypeScript</div>
+        </footer>
+    </div>
+    
+    <!-- Canvas is created by the game script -->
+    <script>
+        (function() {
+            function moveCanvasIntoWrapper() {
+                var wrap = document.querySelector('.canvas-wrap');
+                var canvas = document.querySelector('body > canvas');
+                if (wrap && canvas && !wrap.contains(canvas)) {
+                    wrap.appendChild(canvas);
+                }
+            }
+            // Run once now and also observe future insertions
+            moveCanvasIntoWrapper();
+            var observer = new MutationObserver(function() { moveCanvasIntoWrapper(); });
+            observer.observe(document.body, { childList: true });
+        })();
+    </script>
 </body>
 </html>
